fix layout issue

--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,6 @@
   background-color: var(--bg-color-1);
   padding: 20px;
   border-radius: 10px;
-
   margin-bottom: 12px;
 }
 .cb_loginHeader {
@@ -104,13 +103,30 @@
 .cb_phone {
   margin-bottom: 8px;
 }
+
 .cb_phone,
 .cb_mail {
-  display: flex;
   align-items: center;
   font-size: 20px;
+}
+@media only screen and (max-width: 450px) {
+  .cb_phone,
+  .cb_mail {
+    font-size: 14px;
+  }
+  .cb_phone > img,
+  .cb_mail > img {
+    width: 16px;
+    margin-right: 8px;
+  }
 }
 .cb_phone > img,
 .cb_mail > img {
   margin-right: 12px;
+}
+
+@media only screen and (min-width: 992px) {
+  .right-pr-fixed {
+    padding-right: 0px;
+  }
 }
